--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
                     <div class="text-center">
                         <h2 class="text-3xl text-gray-950 dark:text-white font-semibold">How it works?</h2>
                         <p class="mt-6 text-gray-700 dark:text-gray-300">A <b>protocol of reputation</b> system-based cryptoecon mechanisms <br>with decentralized toolings and computer power <b>enabling community and AI pipelines</b> <br>to support localization across software and content in the Ethereum ecosystems</p>
+                        <p><a href="https://docs.google.com/presentation/d/1xtGcFLisc06wT81VOYeJTgy9Vxp6hP9uyBX7rRj7-64/edit#slide=id.g85cf8b5f36_0_6059">Check out our latest presentation.</a></p>
                     </div>
                     <div class="mt-12 relative h-fit sm:mx-auto sm:px-0 -mx-6 px-6 overflow-x-auto">
                         <div class="flex">
